openmcp-loadbalancing-controller/example/dns_example_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dns-test
spec:
  rules:
  - host: loadalancing.openmcp.org
    http:
      paths:
      - path: /test
        backend:
          serviceName: iot-gateway-svc
          servicePort: 80
