openmcp-loadbalancing-controller/example/example_ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress2
  namespace: openmcp
spec:
  rules:
  - host: cluster1.lb.org.kchtest.org
    http:
      paths:
      - path: /test
        backend:
          serviceName: iot-gateway-svc
          servicePort: 80
  - host: lb-test.openmcp.org
    http:
      paths:
      - path: /service
        backend:
          serviceName: iot-gateway-svc
          servicePort: 80
